fixed image slider on mobile

--- a/styles/Banner.module.scss
+++ b/styles/Banner.module.scss
@@ -4,8 +4,8 @@
 .hero_container {
 	margin: 0 auto;
 	border-radius: 10px 10px 0 0;
-	width: 80vh;
-	height: 80vh;
+	width: 80%;
+	height: 50vh;
 	max-width: 50rem;
 	max-height: 45rem;
 	padding-top: 2rem;
